<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:descendantFocusability="blocksDescendants"
        android:paddingStart="@dimen/spacing_default"
        android:paddingEnd="@dimen/spacing_default">

    <View
            android:id="@+id/dotView"
            android:layout_width="@dimen/spacing_small"
            android:layout_height="@dimen/spacing_small"
            android:background="@drawable/history_circle"
            android:baselineAlignBottom="true"
            app:layout_constraintBottom_toBottomOf="@id/itemTitleTextView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/itemTitleTextView" />

    <TextView
            android:id="@+id/itemTitleTextView"
            style="@style/TextAppearance.App.Body1"
            app:fontFamily="@font/montserrat_bold"
            android:textStyle="bold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_default"
            android:layout_marginTop="@dimen/spacing_default"
            android:layout_marginEnd="30dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/accessed_data_title"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/dotView"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/itemDescriptionTextView"
            style="@style/TextAppearance.App.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="30dp"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/accessed_data_description"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/itemTitleTextView"
            app:layout_constraintTop_toBottomOf="@id/itemTitleTextView" />

    <TextView
            android:id="@+id/itemTimeTextView"
            style="@style/TextAppearance.App.Body2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="30dp"
            android:ellipsize="end"
            android:paddingBottom="@dimen/spacing_default"
            android:text="@string/accessed_data_time"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constrainedWidth="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@id/itemTitleTextView"
            app:layout_constraintTop_toBottomOf="@id/itemDescriptionTextView" />

</androidx.constraintlayout.widget.ConstraintLayout>
